Trying to fix hiding dark mode on mobile menu

--- a/src/pages/custom.css
+++ b/src/pages/custom.css
@@ -27,7 +27,7 @@
   color: var(--text-color-neutral-700);
 }
 
-[class*='toggleButton'] {
+[aria-label="Switch between dark and light mode (currently light mode)"] {
   display: none;
 }
 
